[package]
name = "nightcrawler"
version = "0.1.0"
authors = ["Mateus Davi Simon <mateus.simon@axur.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1.5", features = ["rt", "macros"] }
select = "0.5"
url = "2.1.1"
